<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizPage"
    android:background="@drawable/quizbg"
    >



    <TextView
        android:id="@+id/DispName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/accent_material_light"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentStart="true"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answersgrp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="15dp"
        android:background="#DF5900"
        android:text="@string/nxtqn"
        android:textColor="#000000" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#2036B3"
        android:text="@string/quit"
        android:textColor="@color/white" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/DispName"
        android:id="@+id/answersgrp"
        android:clickable="true"

        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:checked="false"
            />

    </RadioGroup>
    <TextView
        android:id="@+id/tvque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questions"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/answersgrp"/>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/your_score"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/o"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        />



</RelativeLayout>