<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:gravity="center_horizontal"
    tools:context=".SplashScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6F45B8"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextText"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FDBE00"
        android:textSize="100sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:autofillHints="Luqmaan,Grishma"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hintName"
        android:textColor="@color/white"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@id/button2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FF5722"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="580dp"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>